i never had alignment issues, i was just tryna fix an issue that didn't exist lmaoooo

--- a/styles.css
+++ b/styles.css
@@ -24,16 +24,16 @@ body {
     flex-direction: column;
     align-items: center;
     width: 100%;
-    max-width: 18rem;
+    max-width: 20rem;
     border: 2px solid black;
-    padding: 2rem;
+    padding: 1.7rem;
 }
 
 .header {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    gap: 2.5rem;
+    gap: 3.9rem;
     margin-bottom: 2rem;
 }
 
@@ -57,15 +57,6 @@ body {
     width: 1.5rem;
 }
 
-.drug-info {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: left;
-    text-align: left;
-    width: 100%;
-}
-
 .drug-illustration {
     display: flex;
     align-items: center;
@@ -78,15 +69,20 @@ body {
     margin-bottom: 2rem;
 }
 
-.text {
+.drug-info {
     display: flex;
-    width: 100%;
+    flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
     text-align: left;
+    width: 100%;
+    margin-bottom: 2rem;
 }
 
 .drug-info-heading {
-    text-align: left;
-    align-self: flex-start;
+    font-size: 1.5rem;
+}
+
+.drug-info-text {
+    font-size: 0.57rem;
 }
